--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,3 +81,13 @@ services:
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
     restart: on-failure
+
+  ml-serving:
+    build:
+      context: ./src
+      dockerfile: ml-serving/Dockerfile
+    container_name: ml-serving
+    ports:
+      - "8000:8000"
+    depends_on:
+      - consumer
