--- a/src/ml-serving/requirements.txt
+++ b/src/ml-serving/requirements.txt
@@ -1,7 +1,7 @@
-joblib
-pandas
-xgboost
-fastapi
-pydantic
+joblib==1.5.2
+pandas==2.3.2
+xgboost==3.0.5
+fastapi==0.116.1
+pydantic==2.11.7
 scikit-learn==1.7.1
 uvicorn==0.35.0
