--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
-fastapi[standard]
-confluent-kafka
-uvicorn
+confluent-kafka==2.11.1
+jsonschema==4.25.1
+pandas==2.3.2
+faker==37.6.0
+requests==2.32.5
+joblib==1.5.2
+xgboost==3.0.5
+scikit-learn==1.7.1
+fastapi==0.116.1
+pydantic==2.11.7
+uvicorn==0.35.0
+redis==6.4.0
+Jinja2==3.1.6
